dgc/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dgc-ingress
  namespace: dgc
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "10g"

spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - deguzman.cloud
    - api.deguzman.cloud
    - auth.deguzman.cloud
    - dss.deguzman.cloud
    - blog.deguzman.cloud
    - dsa.deguzman.cloud
    - qr.deguzman.cloud
    secretName: dgc-tls
  rules:
  - host: deguzman.cloud
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: dgc-frontend-svc
              port:
                number: 80
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: dgc-backend-svc
              port:
                number: 80

  - host: api.deguzman.cloud
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: dgc-backend-svc
              port:
                number: 80

  - host: auth.deguzman.cloud
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: deguzman-auth
              port:
                number: 80
  - host: dss.deguzman.cloud
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: dss
              port:
                number: 80

  - host: dsa.deguzman.cloud
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: dsa-frontend
              port:
                number: 80

  - host: qr.deguzman.cloud
    http:
      paths:
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: qrcode-backend
              port:
                number: 80

  - host: qr.deguzman.cloud
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: qrcode-frontend
              port:
                number: 80
